# Extracted on 2022-12-22 as described in
# https://www.smileykeith.com/2021/03/08/locking-xcode-in-bazel/

package(default_visibility = ["//visibility:public"])

xcode_version(
    name = "version14_2_0_14C18",
    aliases = [
        "14.2.0.14C18",
        "14.2.0",
        "14C18",
        "14.2",
        "14",
    ],
    default_ios_sdk_version = "16.2",
    default_macos_sdk_version = "13.1",
    default_tvos_sdk_version = "16.1",
    default_watchos_sdk_version = "9.1",
    version = "14.2.0.14C18",
)

xcode_config(
    name = "host_xcodes",
    default = ":version14_2_0_14C18",
    versions = [":version14_2_0_14C18"],
)
