# Extracted on 2022-12-22 as described in
# https://www.smileykeith.com/2021/03/08/locking-xcode-in-bazel/

package(default_visibility = ["//visibility:public"])

# Xcode version on public GitHub Actions macos-12 runners
xcode_version(
    name = "version14_2_0_14C18",
    aliases = [
        "14.2.0.14C18",
        "14.2.0",
        "14C18",
        "14.2",
        "14",
    ],
    default_ios_sdk_version = "16.2",
    default_macos_sdk_version = "13.1",
    default_tvos_sdk_version = "16.1",
    default_watchos_sdk_version = "9.1",
    version = "14.2.0.14C18",
)

# Xcode version on public GitHub Actions macos-13 and macos-14 runners
xcode_version(
    name = "version15_2_0_15C500b",
    aliases = [
        "15.2.0.15C500b",
        "15C500b",
        "15.2.0",
        "15.2",
        "15",
    ],
    default_ios_sdk_version = "17.2",
    default_macos_sdk_version = "14.2",
    default_tvos_sdk_version = "17.1",
    default_watchos_sdk_version = "10.2",
    version = "15.2.0.15C500b",
)

xcode_config(
    name = "host_xcodes",
    default = ":version15_2_0_15C500b",
    versions = [
        ":version15_2_0_15C500b",
        ":version14_2_0_14C18",
    ],
)
