java_binary(
    name = "jazzer_api",
    create_executable = False,
    visibility = ["//visibility:public"],
    runtime_deps = ["//agent/src/main/java/com/code_intelligence/jazzer/api"],
)

java_import(
    name = "jazzer_api_compile_only",
    jars = [
        ":jazzer_api_deploy.jar",
    ],
    neverlink = True,
    visibility = ["//visibility:public"],
)
